--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ body
     font-family: serif;
     font-weight: 700;
     padding-top: 50px;
+    padding-left: 15px;
 }
 .row p{
     font-size: 20px;
 }
 .row .col-md-6 img{
-    height: 450px;
-    width: 550px;
+    height: 350px;
+    width: 395px;
 }
 .row input{
     height: 35px;
