--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body
 .row button{
     width: 250px;
     height: 35px;
+    padding: 10px;
     background-color: darkcyan;
     color: #fff;
     margin-top: 20px;
