--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body
     height: 35px;
     width: 250px;
     padding: 10px;
-    margin: 2px;
+    margin: 5px;
     margin-bottom: 10px;
     border: 2px solid black;
     background-color: beige;
@@ -52,9 +52,9 @@ body
 .row button{
     width: 250px;
     height: 35px;
+    padding: 1px;
     background-color: darkcyan;
     color: #fff;
-    margin-top: 20px;
 }
 .row .red button{
     width: 150px;
